--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <button class="btn-register">Register</button>
         
         <ul id="social-media-links">
-          <li><a href="https://fontawesome.com/icons/facebook-f?style=brands"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="https://fontawesome.com/icons/twitter?style=brands"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://fontawesome.com/icons/instagram?style=brands"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
         </ul>
         
       </div>
