--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <button class="btn-register">Register</button>
         
         <ul id="social-media-links">
-          <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.facebook.com/" target="_blank"><span class="sr-only">Facebook link</span><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="https://twitter.com/" target="_blank"><span class="sr-only">Twitter link</span><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/" target="_blank"><span class="sr-only">Instagram link</span><i class="fab fa-instagram"></i></a></li>
         </ul>
         
       </div>
